# universal_solana_indexer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compile_errors.txt  diff.txt  docker-compose.yml  idl.json  log_check.txt  log_check_final.txt  log_check_final_v4.txt  log_check_v3.txt  log_test_final.txt  log_test_final_v2.txt
.cargo/: config.toml
src/: api.rs  config.rs  db.rs  error.rs  idl.rs  main.rs
src/indexer/: decoder.rs  fetcher.rs  grpc_stream.rs  mod.rs
